/*
 * Copyright 2020 Verizon Media
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import React from 'react';
import { render } from '@testing-library/react';
import Header from '../../../components/header/Header';

describe('Header', () => {
    it('should render', () => {
        let headerDetails = {
            headerLinks: [
                {
                    title: 'Website',
                    url: 'http://www.athenz.io',
                    target: '_blank',
                },
            ],
        };
        const { getByTestId } = render(
            <Header showSearch={false} headerDetails={headerDetails} />
        );
        const header = getByTestId('header');
        expect(header).toMatchSnapshot();
    });
    it('should render with search', () => {
        let headerDetails = {
            headerLinks: [
                {
                    title: 'Website',
                    url: 'http://www.athenz.io',
                    target: '_blank',
                },
            ],
        };
        const { getByTestId } = render(
            <Header showSearch={true} headerDetails={headerDetails} />
        );
        const header = getByTestId('header');
        expect(header).toMatchSnapshot();
    });
});
